Looking real λ-ish! About to add the code to make it less λ-ish.  :(

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>Using HTML5 Canvas</h1>
+  <div id="main">some text</div>
   <canvas align="center" id="canvas" width="1000" height="800"></canvas>
   <script src="bundle.js"></script>
 </body>
